--- a/project-routes-children/src/app/app.component.html
+++ b/project-routes-children/src/app/app.component.html
@@ -1,9 +1,9 @@
 <h1>Routes Children</h1>
 <nav>
   <ul>
-    <li><a routerlink="/homepage">Accueil</a></li>
-    <li><a routerlink="/pokedex">Pokedex</a></li>
-    <li><a routerlink="/books">Livres</a></li>
+    <li><a routerLink="/homepage">Accueil</a></li>
+    <li><a routerLink="/pokedex">Pokedex</a></li>
+    <li><a routerLink="/books">Livres</a></li>
   </ul>
 </nav>
 
