--- a/project-forms/src/app/shared/layout/header/header.component.html
+++ b/project-forms/src/app/shared/layout/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<header class="main-header">
+    <div class="container">
+        <nav>
+            <a routerLink="/homepage">Accueil</a> -
+            <a routerLink="/books">Nos Livres</a>
+        </nav>
+    </div>
+</header>
